force-app/main/default/objects/SBQQ__Quote__c/fields/New_OTC_Advance_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>New_OTC_Advance_Payment_Term__c</fullName>
    <description>GG: Needed for Bill Address SCF</description>
    <label>New OTC Advance Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>