force-app/main/default/objects/SBQQ__Quote__c/fields/New_RC_Advance_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>New_RC_Advance_Payment_Term__c</fullName>
    <description>GG: Needed for Bill Address SCF</description>
    <label>New RC Advance Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly in Advance</fullName>
            </value>
            <value>
                <fullName>Monthly in Arrears</fullName>
            </value>
            <value>
                <fullName>Quarterly in Advance</fullName>
            </value>
            <value>
                <fullName>Quarterly in Arrears</fullName>
            </value>
            <value>
                <fullName>Half yearly in Advance</fullName>
            </value>
            <value>
                <fullName>Half yearly in Arrears</fullName>
            </value>
            <value>
                <fullName>Yearly in Advance</fullName>
            </value>
            <value>
                <fullName>Yearly in Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>