force-app/main/default/objects/SBQQ__Quote__c/fields/No_of_hours_per_month__c.field-meta.xml
<CustomField>
    <fullName>No_of_hours_per_month__c</fullName>
    <label>No of hours per day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>