force-app/main/default/objects/SBQQ__Quote__c/fields/One_Time_Charges_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Charges_Other_Services__c</fullName>
    <inlineHelpText>For Other Services 
• &lt;OTC&gt; of Onetime charges of contract period
• &lt;RC&gt; of Recurring charges of contract period</inlineHelpText>
    <label>One Time Charges Other Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
                <default>true</default>
                <label>50%</label>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>