force-app/main/default/objects/SBQQ__Quote__c/fields/One_Time_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Payment_Terms__c</fullName>
    <label>2bDel_One Time Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25% in advance and balance on delivery</fullName>
            </value>
            <value>
                <fullName>50% in advance and balance on delivery</fullName>
            </value>
            <value>
                <fullName>100% in advance</fullName>
            </value>
            <value>
                <fullName>100% on delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>