force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>SBQQ__Opportunity2__r.OpportunityId__c</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>