force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>IF( SBQQ__Opportunity2__r.IsClosed, &quot;Closed&quot;, &quot;Open&quot;)</formula>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>