force-app/main/default/objects/SBQQ__Quote__c/fields/Opportuntity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportuntity_Id__c</fullName>
    <formula>SBQQ__Opportunity2__r.OpportunityId__c</formula>
    <label>Opportuntity Id(Custom)</label>
    <type>Text</type>
</CustomField>