force-app/main/default/objects/SBQQ__Quote__c/fields/Oppty_Partner_Sec_Acc_Email__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Partner_Sec_Acc_Email__c</fullName>
    <label>Oppty Partner Sec Acc Email</label>
    <type>Email</type>
</CustomField>