force-app/main/default/objects/SBQQ__Quote__c/fields/Original_Master_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Master_Contract_Id__c</fullName>
    <label>Original Master Contract Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>