force-app/main/default/objects/SBQQ__Quote__c/fields/OTC_Advance_Due__c.field-meta.xml
<CustomField>
    <fullName>OTC_Advance_Due__c</fullName>
    <formula>CASE(TEXT(One_Time_Payment_Terms__c),
&quot;25% in advance and balance on delivery&quot;,25,
&quot;50% in advance and balance on delivery&quot;,50,
&quot;100% in advance&quot;,100,
0)* Annual_One_Time_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC Advance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>