force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Commision_Model__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commision_Model__c</fullName>
    <label>Partner Commision Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model A</fullName>
            </value>
            <value>
                <fullName>Model B</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
                <label>Transfer Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>