force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission__c</fullName>
    <label>Partner Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>