force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep__c</fullName>
    <label>Partner Sales Rep</label>
    <type>Email</type>
</CustomField>