force-app/main/default/objects/SBQQ__Quote__c/fields/POC_Purpose__c.field-meta.xml
<CustomField>
    <fullName>POC_Purpose__c</fullName>
    <label>POC Purpose</label>
    <type>TextArea</type>
</CustomField>