force-app/main/default/objects/SBQQ__Quote__c/fields/POC_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>POC_Success_Criteria__c</fullName>
    <label>POC Success Criteria</label>
    <type>TextArea</type>
</CustomField>