force-app/main/default/objects/SBQQ__Quote__c/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <formula>SBQQ__Opportunity2__r.POC_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Type</label>
    <type>Text</type>
</CustomField>