force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Partner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Manager_Email__c</fullName>
    <label>Primary Partner Manager Email</label>
    <type>Email</type>
</CustomField>