force-app/main/default/objects/SBQQ__Quote__c/fields/Product_s_Annexure_Required__c.field-meta.xml
<CustomField>
    <fullName>Product_s_Annexure_Required__c</fullName>
    <label>Product&apos;s Annexure Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>