force-app/main/default/objects/SBQQ__Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Quote #</label>
    <type>AutoNumber</type>
</CustomField>