force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Unlinking_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Unlinking_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Unlinking Completed</label>
    <type>Checkbox</type>
</CustomField>