force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Unlinking_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Unlinking_Status__c</fullName>
    <label>Quote Unlinking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>