force-app/main/default/objects/SBQQ__Quote__c/fields/Reason_For_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Transfer__c</fullName>
    <label>Reason For Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SCF_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amalgamation or Merger</fullName>
            </value>
            <value>
                <fullName>Business Transfer</fullName>
            </value>
            <value>
                <fullName>Voluntary Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>