force-app/main/default/objects/SBQQ__Quote__c/fields/Recurring_Charges_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charges_Third_Party__c</fullName>
    <inlineHelpText>For Services provided by Yotta that have third party element 
• &lt;OTC&gt; of Onetime charges of contract period  
• &lt;RC&gt; of Recurring charges of contract period</inlineHelpText>
    <label>Recurring Charges Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
                <default>true</default>
                <label>100%</label>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>