force-app/main/default/objects/SBQQ__Quote__c/fields/Restrict_Contract_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Contract_Product_Count__c</fullName>
    <description>Field is used to count the Quote Line Item count of restricted product where contract generation is not allowed</description>
    <label>Restrict Contract Product Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Restrict_Contract_Generation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>