force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Rep_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Commission__c</fullName>
    <label>Sales Rep Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>