force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>