force-app/main/default/objects/SBQQ__Quote__c/fields/SCF_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>SCF_Product_Count__c</fullName>
    <label>SCF Product Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SCF_Type__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>