force-app/main/default/objects/SBQQ__Quote__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <inlineHelpText>Please use font size of 10</inlineHelpText>
    <label>Scope of Work</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>