force-app/main/default/objects/SBQQ__Quote__c/fields/Secondary_Partner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Partner_Manager_Email__c</fullName>
    <label>Secondary Partner Manager Email</label>
    <type>Email</type>
</CustomField>