force-app/main/default/objects/SBQQ__Quote__c/fields/Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Engineer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Yotta SE Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>