force-app/main/default/objects/SBQQ__Quote__c/fields/Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>