force-app/main/default/objects/SBQQ__Quote__c/fields/Support_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support To Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Support To Customer)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>