force-app/main/default/objects/SBQQ__Quote__c/fields/TCV_Formula_for_Year_3__c.field-meta.xml
<CustomField>
    <fullName>TCV_Formula_for_Year_3__c</fullName>
    <label>TCV Formula for Year 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>