force-app/main/default/objects/SBQQ__Quote__c/fields/Technical_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Approval_Status__c</fullName>
    <label>Technical Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Required</fullName>
                <default>true</default>
                <label>Approval Required</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>