force-app/main/default/objects/SBQQ__Quote__c/fields/Termination_Fee_Initial_Contract__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Initial_Contract__c</fullName>
    <inlineHelpText>If terminated during first / initial contract period 
• Advance written Notice period: &lt;AD1&gt; or the monthly recurring charges in lieu thereof 
• Termination fee: &lt;TF1&gt; of Recurring charges of balance contract period</inlineHelpText>
    <label>Termination Fee Initial Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
                <default>true</default>
                <label>100%</label>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>