force-app/main/default/objects/SBQQ__Quote__c/fields/Termination_Fee_Renewal_renewal__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Renewal_renewal__c</fullName>
    <inlineHelpText>2. If terminated during renewal contract period 
• Advance written Notice period: &lt;AD2&gt; or the monthly recurring charges in lieu thereof 
• Termination fee: &lt;TF2&gt; of Recurring charges of balance of renewal contract period</inlineHelpText>
    <label>Termination Fee Renewal Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
                <default>true</default>
                <label>50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>