force-app/main/default/objects/SBQQ__Quote__c/fields/Tertiary_Partner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Partner_Manager_Email__c</fullName>
    <label>Tertiary Partner Manager Email</label>
    <type>Email</type>
</CustomField>