force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Advance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Advance_Due__c</fullName>
    <description>Total Advance Due = Total Advance MRC * Billing Frequency + OTC Advance Due</description>
    <formula>CASE(TEXT( SBQQ__BillingFrequency__c ), 
&quot;Monthly&quot;, (Total_Advance_MRC__c * 1) + OTC_Advance_Due__c, 
&quot;Quarterly&quot;, (Total_Advance_MRC__c * 3) + OTC_Advance_Due__c,
&quot;Semiannual&quot;,(Total_Advance_MRC__c * 6) + OTC_Advance_Due__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Advance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>