force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Advance_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_Advance_MRC__c</fullName>
    <label>Total Advance MRC</label>
    <summarizedField>SBQQ__QuoteLine__c.Final_Unit_Price__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>