force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Grand_Total__c</fullName>
    <formula>Total_One_Time_Charge__c + Total_Recurring_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>