force-app/main/default/objects/SBQQ__Quote__c/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <formula>Annual_One_Time_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total One Time Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>