force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Recurring_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Charge__c</fullName>
    <label>Total Recurring Charge</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Price_Dimension_Type__c</field>
        <operation>equals</operation>
        <value>MRC</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>