force-app/main/default/objects/SBQQ__Quote__c/fields/Use_Transfer_Price__c.field-meta.xml
<CustomField>
    <fullName>Use_Transfer_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Transfer Price</label>
    <type>Checkbox</type>
</CustomField>