force-app/main/default/objects/SBQQ__Quote__c/fields/User_connectivity_details__c.field-meta.xml
<CustomField>
    <fullName>User_connectivity_details__c</fullName>
    <label>User connectivity details</label>
    <type>TextArea</type>
</CustomField>