force-app/main/default/objects/SBQQ__Quote__c/fields/Validate_Commission_Model__c.field-meta.xml
<CustomField>
    <fullName>Validate_Commission_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Commission Model</label>
    <type>Checkbox</type>
</CustomField>