force-app/main/default/objects/SBQQ__Quote__c/fields/Variable_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Variable_Product_Count__c</fullName>
    <label>Variable Product Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Variable_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>