force-app/main/default/objects/SBQQ__Quote__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>